# learn-c

./: .gitignore  CMakeLists.txt  matrix_hasher.cpp  matrix_hasher.hpp  time_func.cpp
src/: main.cpp
tests/: CMakeLists.txt  matrix_hasher_tests.cpp
